--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /.metadata/
+/ProjectWeb/src/main/java/it602003/ConnectionPool.java
+/ProjectWeb/src/main/java/it602003/ConnectionPoolImpl.java
+/Servers
+
+/apache-tomcat-9.0.40
