--- a/ProjectWeb/.settings/org.eclipse.core.resources.prefs
+++ b/ProjectWeb/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,6 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/WEB-INF/view/component/footer.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/component/header.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/component/sidebar.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/viewUser.jsp=UTF-8
 encoding/<project>=UTF-8
